k8s/kyverno/policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-non-root

spec:
  validationFailureAction: Enforce

  rules:
    - name: run-as-non-root

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must run as non-root"

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
