k8s/kyverno/policies/require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-readonly-rootfs

spec:
  validationFailureAction: Enforce

  rules:
    - name: readonly-rootfs

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Root filesystem must be read only"

        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
