k8s/kyverno/policies/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits

spec:
  validationFailureAction: Enforce

  rules:
    - name: check-resources

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "CPU and memory limits are required"

        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
